# nixos-config

./: .gitignore  README.md  configuration.nix  flake.nix  hardware.nix
home/: colors.nix  default.nix  fonts.nix  git.nix  gtk.nix  home.nix  packages.nix
home/apps/: firefox.nix  ghostty.nix  rofi.nix  yazi.nix  zen.nix  zsh.nix
home/apps/nvim/: default.nix
home/apps/nvim/lua/: init.lua  keymaps.lua  options.lua
home/colors/: colors-ember.nix  colors-template.nix  colors-vesper.nix  theme.nix
home/desktop/: swaync.nix  wallpaper.nix  waybar.nix
home/desktop/hypr/: hypridle.nix  hyprlock.nix
home/desktop/hypr/hyprland/: autostart.nix  (+14 more)
home/firefox/: firefox.nix
home/ghostty/: ghostty.nix
home/hypr/hypridle/: hypridle.nix
home/hypr/hyprland/: autostart.nix  default.nix  dwindle.nix  env.nix  gestures.nix  input.nix  keybinds.nix  layer-rules.nix  master.nix  misc.nix  monitors.nix  variables.nix  window-rules.nix  workspaces.nix  xwayland.nix
home/hypr/hyprlock/: hyprlock.nix
home/nvim/: default.nix  keymaps.nix  options.nix
home/nvim/lua/: init.lua  keymaps.lua  options.lua
home/nvim/plugins/: cmp.nix  editor.nix  git.nix  lsp.nix  telescope.nix  ui.nix
home/rofi/: rofi.nix
home/scripts/cheatsheet/: Cargo.toml  default.nix
home/scripts/cheatsheet/src/: main.rs  rofi.rs
home/scripts/cheatsheet/src/parser/: hyprland.rs  mod.rs  neovim.rs
home/swaync/: swaync.nix
home/waybar/: waybar.nix
home/yazi/: yazi.nix
home/zsh/: zsh.nix
hosts/nixos/: default.nix  hardware.nix
hosts/thinkbook/: default.nix  hardware-configuration.nix
(+44 files in other folders)
